<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/days_one"
        android:gravity="center_horizontal"
        android:text="@string/Text_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnDevs"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginVertical="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="200dp"
        android:onClick="onClick"
        android:text="@string/Devs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnProfile"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginVertical="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClick"
        android:text="@string/Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnHome"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:onClick="onClick"
        android:text="@string/Main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BtnSpisok"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:onClick="onClick1"
        android:text="@string/List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BtnSettings"
        app:layout_constraintStart_toEndOf="@+id/BtnHome" />

    <Button
        android:id="@+id/BtnSettings"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:onClick="onClick"
        android:text="@string/Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>