<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PrivacyFragment"
    android:background="@drawable/gradient_drawable">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/days_one"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="572dp"
        android:fontFamily="@font/days_one"
        android:text="@string/Update"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnProfileDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="636dp"
        android:fontFamily="@font/days_one"
        android:text="@string/profileDelete"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="top|center"
        android:layout_marginBottom="44dp"
        android:autofillHints="Email"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/days_one"
        android:ems="13"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="top|center"
        android:layout_marginBottom="44dp"
        android:autofillHints="Login"
        android:fontFamily="@font/days_one"
        android:ems="13"
        android:hint="@string/Login"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="top|center"
        android:layout_marginBottom="44dp"
        android:autofillHints="Password"
        android:fontFamily="@font/days_one"
        android:ems="13"
        android:hint="@string/Password"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BtnHome"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:onClick="onClick"
        android:text="@string/Main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BtnSpisok"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:onClick="onClick1"
        android:text="@string/List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BtnSettings"
        app:layout_constraintStart_toEndOf="@+id/BtnHome" />

    <Button
        android:id="@+id/BtnSettings"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:onClick="onClick"
        android:text="@string/Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>